--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: release
 on:
   workflow_dispatch:
   push:
+    branches:
+      - opencode
     tags:
       - "*"
 
@@ -25,16 +27,13 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ">=1.23.2"
-          cache: true
-          cache-dependency-path: go.sum
 
       - run: go mod download
-
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           version: latest
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.HOMEBREW_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AUR_KEY: ${{ secrets.AUR_KEY }}
