--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,10 +45,10 @@ aurs:
       - opencode
     package: |-
       install -Dm755 ./opencode "${pkgdir}/usr/bin/opencode"
-# brews:
-#   - repository:
-#       owner: opencode-ai
-#       name: homebrew-tap
+brews:
+  - repository:
+      owner: opencode-ai
+      name: homebrew-tap
 nfpms:
   - maintainer: opencode
     description: terminal based agent that can build anything
